@@ -1,3 +1,10 @@
+2011-12-19  Sandra Loosemore  <sandra@codesourcery.com>
+	    Tom de Vries <tom@codesourcery.com>
+
+	PR rtl-opt/50380
+	* cse.c (find_comparison_args): Detect fixed point and
+	bail early.
+
 2011-12-19  Aldy Hernandez  <aldyh@redhat.com>
 
 	PR middle-end/51411
